<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <RelativeLayout

        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView

            android:textSize="25sp"
            android:textColor="@color/colorGreenTitle"
            android:id="@+id/txtVtituloMostrar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/titulo_informacion_plantas" />

        <TextView

            android:id="@+id/textVidMs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="150dp"
            android:textColor="@color/colorBlack"
            android:text="@string/columna_id_plantas"
            />

        <EditText
            android:id="@+id/edTextIdMs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="140dp"
            android:editable="false"
            android:ems="10"
            android:textColor="@color/colorGray"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/txtVnombreCientificoMs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="250dp"
            android:text="@string/columna_nombre_cientifico_plantas"
            android:textColor="@color/colorBlack"

            />

        <EditText android:id="@+id/edTextNombreCientificoMs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="240dp"
            android:textSize="15dp"
            android:editable="false"
            android:ems="10"/>

        <TextView android:id="@+id/txtVnombreComúnMs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="350dp"
            android:text="@string/columna_nombre_comun_plantas"
            android:textColor="@color/colorBlack"/>

        <EditText android:id="@+id/edTextNombreComúnMs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="340dp"
            android:editable="false"
            android:textSize="15dp"
            android:ems="10" />

        <TextView
            android:id="@+id/txtVfamiliaMs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="450dp"
            android:text="@string/columna_familia_plantas"
            android:textColor="@color/colorBlack"/>

        <EditText
            android:id="@+id/edTextFamiliaMs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="440dp"
            android:textSize="15dp"
            android:ems="10"
            android:editable="false"/>

        <TextView
            android:id="@+id/txtVgéneroMs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="550dp"
            android:textColor="@color/colorBlack"
            android:text="@string/columna_genero_plantas" />

        <EditText
            android:id="@+id/edTextGéneroMs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="540dp"
            android:textSize="15dp"
            android:editable="false"
            android:ems="10" />


    </RelativeLayout>
</ScrollView>